--- a/partner.css
+++ b/partner.css
@@ -19,12 +19,31 @@ html {
     transition: all 0.4s ease-in;
     visibility: hidden;
 }
+.content .partner_social_media {
+    position: absolute;
+    top: 1%;
+    right: 1%;
+}
+.content .partner_social_media_icons {
+    display: inline;
+    color: white;
+    font-size: 3vw;
+    text-decoration: none;
+    transition: 250ms linear;
+}
+.content .partner_social_media_icons:hover {
+    transition: 250ms linear;
+    filter: brightness(50%);
+}
 .content #shameless_product_placement_logo {
     width: 55%;
     height: auto;
     position: absolute;
-    left: 30%;
-    top: 25%;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     transition: 250ms linear;
 }
 .content #shameless_product_placement_logo:hover {
@@ -36,7 +55,7 @@ html {
     left: 3%;
     top: 50%;
 }
-.content #partner_contact_button {
+.content #partner_button {
     height: 60px;
     background: #5E5DF0;
     border-radius: 999px;
@@ -56,7 +75,7 @@ html {
     text-decoration: none;
     transition: 250ms;
 }
-.content #partner_contact_button:hover {
+.content #partner_button:hover {
     background:#4747b7;
     transition: 250ms;
 }
@@ -64,7 +83,8 @@ html {
     position: absolute;
     top: 80%;
     width: 100%;
-    background-image: linear-gradient(transparent, white 10%);
+    background-image: linear-gradient(transparent, white 15%);
+    min-height: 200vh;
 }
 .content #partner_information {
     margin-top: 20%;
@@ -72,14 +92,27 @@ html {
 }
 .content #partner_title {
     text-align: center;
-    font-size: 10vw;
+    font-size: 6.5vw;
     font-family: 'EB Garamond';
+}
+.content #partner_secondary_title {
+    text-align: center;
+    font-size: 6vw;
+    font-family: 'EB Garamond';
+}
+.content #partner_subtitle {
+    font-size: 3vw;
+    font-family: 'EB Garamond';
+    display: inline-block;
+    margin-left: 2%;
+    margin-right: 2%;
+    text-align: center;
 }
 .content .partner_information_part_1 {
     display: grid;
     align-items: center; 
-    grid-template-columns: 60% 40%;
-    column-gap: 5px;
+    grid-template-columns: 55% 40%;
+    column-gap: 5%;
     margin-left: 2%;
     margin-right: 2%;
 
@@ -98,8 +131,8 @@ html {
     margin-top: 20px;
     display: grid;
     align-items: center; 
-    grid-template-columns: 40% 60%;
-    column-gap: 5px;
+    grid-template-columns: 40% 55%;
+    column-gap: 5%;
     margin-left: 2%;
     margin-right: 2%;
 }
@@ -114,30 +147,187 @@ html {
     display: inline-block;
     width: 100%;
 }
-.partner_options_menu_options {
-    border: 1px solid black;
-    margin-top: 2vh;
+.content .collaborate_button_section {
+    text-align: center;
+    margin-top: 4%;
 }
-.partner_options_menu_images {
-    width: 100%;
+.content .collaborate_button_section #collaborate_button {
+    text-align: center;
+    transition: 250ms linear;
+    border-color: gray;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-size: 3vw;
+    outline: 0 solid transparent;
+    padding: 1%;
+    word-break: break-word;
+    border-style: solid;
+    font-family:'Fira Sans';
+    text-decoration: none;
+    filter: drop-shadow(0 5px gray);
 }
-.partner_options_menu_titles {
-    font-size: 2vw;
-    font-family: 'Fira Sans';
+.content .collaborate_button_section #collaborate_button:hover {
+    transition: 250ms linear;
+    transform: translate(0px, 5px);
+    filter: drop-shadow(0 0);
 }
-.partner_options_menu_values {
-    font-size: 1.5vw;
-    font-family: 'Fira Sans';
-}
-.partner_options_menu_descriptions {
-    font-size: 1vw;
-    font-family: 'Fira Sans';
-}
-.partner_options_menu_benefits_title {
-    font-size: 1vw;
-    font-family: 'Fira Sans';
-}
-.partner_options_menu_benefits {
-    font-size: 1vw;
-    font-family: 'Fira Sans';
+@media only screen and (max-device-width: 1024px) {
+    .content .partner_social_media {
+        position: absolute;
+        top: 3%;
+        right: 3%;
+    }
+    .content .partner_social_media_icons {
+        display: inline;
+        color: white;
+        font-size: 7vw;
+        text-decoration: none;
+        transition: 250ms linear;
+    }
+    .content .partner_social_media_icons:hover {
+        transition: 250ms linear;
+        filter: brightness(50%);
+    }
+    .content #shameless_product_placement_logo {
+        width: 90%;
+        height: auto;
+        position: absolute;
+        margin: auto;
+        left: 0;
+        right: 0;
+        bottom: 50%;
+        transition: 250ms linear;
+    }
+    .content #shameless_product_placement_logo:hover {
+        filter: brightness(75%);
+        transition: 250ms linear;
+    }
+    .content #partner_buttons {
+        position: absolute;
+        top: 40%;
+    }
+    .content #partner_button {
+        height: 60px;
+        background: #5E5DF0;
+        border-radius: 999px;
+        box-shadow: #5E5DF0 0 10px 20px -10px;
+        box-sizing: border-box;
+        color: #FFFFFF;
+        cursor: pointer;
+        font-size: 3vw;
+        line-height: 24px;
+        opacity: 1;
+        outline: 0 solid transparent;
+        padding: 8px 18px;
+        word-break: break-word;
+        border: 0;
+        margin-left: 10vw;
+        font-family:'Fira Sans';
+        text-decoration: none;
+        transition: 250ms;
+    }
+    .content #partner_button:hover {
+        background:#4747b7;
+        transition: 250ms;
+    }
+    .content #partner_overlay {
+        position: absolute;
+        top: 60%;
+        width: 100%;
+        background-image: linear-gradient(transparent, white 20%);
+        min-height: 200vh;
+    }
+    .content #partner_information {
+        margin-top: 20%;
+        margin-bottom: 10%;
+        margin-left: 2%;
+        margin-right: 2%;
+        text-align: center;
+    }
+    .content #partner_title {
+        margin-top: 60%;
+        text-align: center;
+        font-size: 9.5vw;
+        font-family: 'EB Garamond';
+    }
+    .content #partner_subtitle {
+        font-size: 6vw;
+        font-family: 'EB Garamond';
+        display: inline-block;
+        margin-left: 2%;
+        margin-right: 2%;
+        text-align: center;
+    }
+    .content #partner_secondary_title {
+        margin-top: 10%;
+        text-align: center;
+        font-size: 9vw;
+        font-family: 'EB Garamond';
+    }
+    .content .partner_information_part_1 {
+        display: inline;
+        text-align: center;
+    }
+    .content .partner_information_part_1 .partner_information_part_1_text {
+        margin-bottom: 10%;
+    }
+    .content #partner_details_part_1 {
+        font-size: 4vw;
+        font-family: 'EB Garamond';
+        display: inline-block;
+        text-align: left;
+    }
+    .content #partner_example_1 {
+        display: inline;
+        width: 40%;
+        text-align: center;
+    }
+    .content .partner_information_part_2 {
+        display: inline;
+        text-align: center;
+    }
+    .content .partner_information_part_2 .partner_information_part_2_text {
+        margin-top: 10%;
+    }
+    .content #partner_details_part_2 {
+        font-size: 4vw;
+        font-family: 'EB Garamond';
+        display: inline-block;
+        text-align: left;
+    }
+    .content #partner_example_2 {
+        display: inline;
+        width: 40%;
+        text-align: center;
+    }
+    .content .collaborate_button_section {
+        text-align: center;
+        margin-top: 4%;
+    }
+    .content .collaborate_button_section #collaborate_button {
+        text-align: center;
+        transition: 250ms linear;
+        border-color: gray;
+        background-color: black;
+        color: white;
+        border-radius: 10px;
+        box-sizing: border-box;
+        cursor: pointer;
+        font-size: 9vw;
+        outline: 0 solid transparent;
+        padding: 1%;
+        word-break: break-word;
+        border-style: solid;
+        font-family:'Fira Sans';
+        text-decoration: none;
+        filter: drop-shadow(0 5px gray);
+    }
+    .content .collaborate_button_section #collaborate_button:hover {
+        transition: 250ms linear;
+        transform: translate(0px, 5px);
+        filter: drop-shadow(0 0);
+    }
 }
