--- a/careers.css
+++ b/careers.css
@@ -105,28 +105,28 @@ body {
     font-size: 1.2vw;
     color: gray;
 }
-.content .careers_apply_buttons {
-    width: 10vw;
-    border-radius: 999px;
+.content .careers_apply_button_section .careers_apply_buttons {
+    text-align: center;
+    transition: 250ms linear;
+    border-color: black;
+    background-color: white;
+    color: black;
+    border-radius: 10px;
     box-sizing: border-box;
-    background-color: black;
-    color: white;
     cursor: pointer;
-    font-size: 1vw;
-    opacity: 1;
+    font-size: 1.5vw;
     outline: 0 solid transparent;
-    padding: 8px 18px;
+    padding: 1%;
+    word-break: break-word;
     border-style: solid;
-    border-color: white;
     font-family:'Fira Sans';
     text-decoration: none;
-    margin-left: 1vw;
-    margin-right: 1vw;
-    transition: 250ms linear;
+    filter: drop-shadow(0 5px);
 }
-.content .careers_apply_buttons:hover {
-    filter: brightness(75%);
+.content .careers_apply_button_section .careers_apply_buttons:hover {
     transition: 250ms linear;
+    transform: translate(0px, 5px);
+    filter: drop-shadow(0 0);
 }
 .content .careers_images {
     width: 100%;
@@ -148,4 +148,150 @@ body {
     margin-right: 2%;
     padding-bottom: 200%;
     text-align: center;
+}
+@media only screen and (max-device-width: 1024px) {
+    #background_video {
+        min-height: 100vh;
+        max-width: 100%;
+        object-fit: fill;
+        position: sticky;
+        position: -webkit-sticky;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: -1;
+        filter: brightness(50%);
+    }
+    .unscrollable {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+    .content.close {
+        transition: all 0.4s ease-in;
+        visibility: hidden;
+    }
+    .content #shameless_product_placement_logo {
+        position: absolute;
+        width: 40%;
+        right: 3%;
+        top: 3%;
+        transition: 250ms linear;
+    }
+    .content #shameless_product_placement_logo:hover {
+        filter: brightness(75%);
+        transition: 250ms linear;
+    }
+    .content #careers_text {
+        color: white;
+        font-family: 'MuseoModerno';
+        position: absolute;
+        top: 30%;
+        left: 2%;
+        font-size: 10vw;
+    }
+    .content #careers_subtext {
+        color: white;
+        font-family: 'MuseoModerno';
+        position: absolute;
+        top: 70%;
+        left: 2%;
+        font-size: 8vw;
+    }
+    .content .careers_buttons {
+        margin-left: 10%;
+        margin-top: 3%;
+        border: none;
+        background-color: transparent;
+        color: white;
+        font-size: 8vw;
+        font-family: 'MuseoModerno';
+        transition: 250ms linear;
+    }
+    .content .careers_buttons:hover {
+        filter: brightness(50%);
+        transition: 250ms linear;
+    }
+    .content .careers_extensions {
+        background-color: white;
+    }
+    .content .careers_descriptions {
+        background-color: white;
+        width: 100%;
+        transition: 250ms linear;
+        display: block;
+    }
+    .content .careers_text {
+        padding: 2%;
+    }
+    .content .careers_main_text {
+        margin-left: 2%;
+        margin-right: 2%;
+        font-family: 'Fira Sans';
+        font-size: 5vw;
+        color: black;
+    
+    }
+    .content .careers_skills_titles {
+        margin-left: 2%;
+        margin-right: 2%;
+        font-family: 'Fira Sans';
+        font-size: 4.5vw;
+        color: black;
+    }
+    .content .careers_skills_list {
+        margin-left: 2%;
+        margin-right: 2%;
+        font-family: 'Fira Sans';
+        font-size: 4vw;
+        color: gray;
+    }
+    .content .careers_apply_button_section {
+        text-align: center;
+    }
+    .content .careers_apply_button_section .careers_apply_buttons {
+        text-align: center;
+        transition: 250ms linear;
+        border-color: black;
+        background-color: white;
+        color: black;
+        border-radius: 10px;
+        box-sizing: border-box;
+        cursor: pointer;
+        font-size: 5vw;
+        outline: 0 solid transparent;
+        padding: 1%;
+        word-break: break-word;
+        border-style: solid;
+        font-family:'Fira Sans';
+        text-decoration: none;
+        filter: drop-shadow(0 5px);
+    }
+    .content .careers_apply_button_section .careers_apply_buttons:hover {
+        transition: 250ms linear;
+        transform: translate(0px, 5px);
+        filter: drop-shadow(0 0);
+    }
+    .content .careers_images {
+        width: 100%;
+        padding: 4%;
+        margin-bottom: 4%;
+    }
+    .content #careers_why_title {
+        margin-top: 8%;
+        color: white;
+        font-family: 'MuseoModerno';
+        font-size: 10vw;
+        text-align: center;
+    }
+    .content #careers_why_text {
+        font-size: 4vw;
+        font-family: 'Fira Sans';
+        color: white;
+        margin-left: 2%;
+        margin-right: 2%;
+        padding-bottom: 200%;
+        text-align: center;
+    }
 }
