--- a/contact.css
+++ b/contact.css
@@ -4,9 +4,7 @@
 
 body {
     overflow: hidden;
-}
-html{
-    background-color: black;
+    background-image: linear-gradient(black, #7335b1 60%);
 }
 .content #contact {
     margin-top: 10vh;
@@ -17,7 +15,6 @@ html{
 }
 .content #contact_section {
     display: inline-block;
-    background-image: linear-gradient(black, #7335b1 60%);
     font-family: 'Oswald';
     color: white;
 }
@@ -26,7 +23,7 @@ html{
     text-align: center;
 }
 .content #contact_secondary_title {
-    font-size: 3vw;
+    font-size: 4vw;
     text-align: center;
 }
 .content #contact_information {
@@ -51,14 +48,13 @@ html{
 }
 .content #contact_form {
     display: inline;
-    background-image: linear-gradient(black, #7335b1 60%);
     text-align: center;
     font-family: 'Oswald';
 }
 .content .contact_form_name {
     width: 45%;
     display: inline;
-    margin-top: 40px;
+    margin-top: 3%;
     margin-left: 1%;
     margin-right: 1%;
     text-align: center;
@@ -67,7 +63,7 @@ html{
     border: none;
     border-bottom: 2px solid white;
     color: white;
-    font-size: 14px;
+    font-size: 1.5vw;
     outline: none;
     transition: border-color .2s;
 }
@@ -77,7 +73,7 @@ html{
 .content #contact_form_email {
     width: 92.5%;
     display: inline;
-    margin-top: 20px;
+    margin-top: 2%;
     margin-left: 1%;
     margin-right: 1%;
     text-align: center;
@@ -86,7 +82,7 @@ html{
     border: none;
     border-bottom: 2px solid white;
     color: white;
-    font-size: 14px;
+    font-size: 1.5vw;
     outline: none;
     transition: border-color .2s;
 }
@@ -96,7 +92,7 @@ html{
 .content #contact_form_company {
     width: 92.5%;
     display: inline;
-    margin-top: 20px;
+    margin-top: 2%;
     margin-left: 1%;
     margin-right: 1%;
     text-align: center;
@@ -105,7 +101,7 @@ html{
     border: none;
     border-bottom: 2px solid white;
     color: white;
-    font-size: 14px;
+    font-size: 1.5vw;
     outline: none;
     transition: border-color .2s;
 }
@@ -120,13 +116,12 @@ html{
     background: none;
     border: 2px solid white;
     color: white;
-    font-size: 14px;
+    font-size: 1.5vw;
     outline: none;
     transition: border-color .2s;
-    margin-top: 20px;
+    margin-top: 2%;
     margin-left: 1%;
     margin-right: 1%;
-    margin-bottom: 3%;
     resize: none;
 }
 .content #contact_form_message::placeholder {
@@ -139,10 +134,10 @@ html{
     background-color: white;
     border: 2px solid black;
     color: black;
-    font-size: 14px;
+    font-size: 1.5vw;
     outline: none;
     transition: border-color .2s;
-    margin-top: 20px;
+    margin-top: 2%;
     margin-left: 1%;
     margin-right: 1%;
     margin-bottom: 3%;
@@ -151,4 +146,148 @@ html{
 .content #contact_form_submit_button:hover {
     background-color: gray;
     transition: 250ms linear;
+}
+@media only screen and (max-device-width: 1024px) {
+    body {
+        background-image: linear-gradient(black, #7335b1 60%);
+    }
+    .content #contact {
+        margin-top: 6.5vh;
+        display: block;
+        height: 260vh;
+        overflow: hidden;
+    }
+    .content #contact_section {
+        display: block;
+        font-family: 'Oswald';
+        color: white;
+    }
+    .content #contact_title {
+        font-size: 10vw;
+        text-align: center;
+    }
+    .content #contact_secondary_title {
+        font-size: 7vw;
+        text-align: center;
+    }
+    .content #contact_information {
+        font-size: 5vw;
+        text-align: left;
+        margin-left: 5%;
+    }
+    .content .icons_section {
+        text-align: center;
+    }
+    .content .icons {
+        font-size: 7vw;
+        color: white;
+        margin-left: 5%;
+        display: inline;
+        text-align: center;
+        transition: 250ms linear;
+    }
+    .content .icons:hover {
+        filter: brightness(50%);
+        transition: 250ms linear;
+    }
+    .content #contact_form {
+        display: inline;
+        text-align: center;
+        font-family: 'Oswald';
+    }
+    .content .contact_form_name {
+        width: 45%;
+        display: inline;
+        margin-left: 1%;
+        margin-right: 1%;
+        text-align: center;
+        padding: 10px 0;
+        background: none;
+        border: none;
+        border-bottom: 2px solid white;
+        color: white;
+        font-size: 4vw;
+        outline: none;
+        transition: border-color .2s;
+    }
+    .content .contact_form_name::placeholder {
+        color: white;
+    }
+    .content #contact_form_email {
+        width: 92.5%;
+        display: inline;
+        margin-top: 3%;
+        margin-left: 1%;
+        margin-right: 1%;
+        text-align: center;
+        padding: 10px 0;
+        background: none;
+        border: none;
+        border-bottom: 2px solid white;
+        color: white;
+        font-size: 4vw;
+        outline: none;
+        transition: border-color .2s;
+    }
+    .content #contact_form_email::placeholder {
+        color: white;
+    }
+    .content #contact_form_company {
+        width: 92.5%;
+        display: inline;
+        margin-top: 3%;
+        margin-left: 1%;
+        margin-right: 1%;
+        text-align: center;
+        padding: 10px 0;
+        background: none;
+        border: none;
+        border-bottom: 2px solid white;
+        color: white;
+        font-size: 4vw;
+        outline: none;
+        transition: border-color .2s;
+    }
+    .content #contact_form_company::placeholder {
+        color: white;
+    }
+    .content #contact_form_message {
+        width: 92.5%;
+        height: 100%;
+        display: inline;
+        padding: 10px 10px;
+        background: none;
+        border: 2px solid white;
+        color: white;
+        font-size: 4vw;
+        outline: none;
+        transition: border-color .2s;
+        margin-top: 3%;
+        margin-left: 1%;
+        margin-right: 1%;
+        resize: none;
+    }
+    .content #contact_form_message::placeholder {
+        color: white;
+    }
+    .content #contact_form_submit_button {
+        width: 92.5%;
+        display: inline;
+        padding: 10px 10px;
+        background-color: white;
+        border: 2px solid black;
+        color: black;
+        font-size: 4vw;
+        outline: none;
+        transition: border-color .2s;
+        margin-top: 3%;
+        margin-left: 1%;
+        margin-right: 1%;
+        margin-bottom: 3%;
+        transition: 250ms linear;
+    }
+    .content #contact_form_submit_button:hover {
+        background-color: gray;
+        transition: 250ms linear;
+    }
 }
