--- a/home.css
+++ b/home.css
@@ -119,27 +119,6 @@ body {
     margin: 0;
     padding: 0;
 }
-.content .scrollable_area .serve_section .serve_header .serve_button_links {
-    text-decoration: none;
-    margin: 0;
-    padding: 0;
-}
-.content .scrollable_area .serve_section .serve_header .serve_buttons {
-    color: white;
-    font-size: 2vw;
-    font-family: 'Fira Sans';
-    text-align: center;
-    transition: 250ms linear;
-    border: none;
-    background-color: transparent;
-    display: inline;
-    text-decoration: none;
-    font-weight: bold;
-}
-.content .scrollable_area .serve_section .serve_header .serve_buttons:hover {
-    filter: brightness(50%);
-    transition: 250ms linear;
-}
 .content .scrollable_area .serve_section .serve_information {
     display: grid;
     grid-template-columns: 33% 33% 33%;
@@ -149,12 +128,34 @@ body {
     text-align: center;
     margin-bottom: 4%;
 }
-.content .scrollable_area .serve_section .serve_information .serve_description {
+.content .scrollable_area .serve_section .serve_information .serve_button_links {
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+}
+.content .scrollable_area .serve_section .serve_information .serve_buttons {
+    color: white;
+    font-size: 2vw;
+    font-family: 'Fira Sans';
+    text-align: center;
+    transition: 250ms linear;
+    border: none;
+    background-color: transparent;
+    text-decoration: none;
+    font-weight: bold;
+}
+.content .scrollable_area .serve_section .serve_information .serve_buttons:hover {
+    filter: brightness(50%);
+    transition: 250ms linear;
+}
+.content .scrollable_area .serve_section .serve_information .serve_list {
+    text-align: center;
+    list-style: inside;
+}
+.content .scrollable_area .serve_section .serve_information .serve_list .serve_description {
     color: white;
     font-size: 1.25vw;
     font-family: 'Fira Sans';
-    text-align: left;
-    margin-left: 8%;
 }
 .content .scrollable_area .team_section {
     margin-bottom: 10%;
@@ -245,7 +246,6 @@ body {
     margin-right: 1vw;
 }
 .content .scrollable_area .game_section .games_buttons {
-    width: 15vw;
     border-radius: 999px;
     box-sizing: border-box;
     background-color: transparent;
@@ -276,4 +276,257 @@ body {
     transform: scale(1.05);
     transition: 250ms linear;
     padding: none;
+}
+@media only screen and (max-device-width: 1024px) {
+    #background_video {
+        min-height: 100vh;
+        max-width: 100%;
+        object-fit: fill;
+        position: sticky;
+        position: -webkit-sticky;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: -1;
+        filter: brightness(50%);
+    }
+    .unscrollable {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+    .content.close {
+        transition: all 0.4s ease-in;
+        visibility: hidden;
+    }
+    .content #shameless_product_placement_logo {
+        position: absolute;
+        width: 40%;
+        right: 3%;
+        top: 3%;
+        transition: 250ms linear;
+    }
+    .content #shameless_product_placement_logo:hover {
+        transition: 250ms linear;
+        filter: brightness(75%);
+    }
+    .content #home_text {
+        color: white;
+        font-family: 'MuseoModerno';
+        position: absolute;
+        top: 30%;
+        left: 2%;
+        font-size: 10vw;
+    }
+    .content #scroll {
+        display: inline-block;
+        text-decoration: none;
+    }
+    .content #down_arrow {
+        position: absolute;
+        margin: auto;
+        left: 0;
+        right: 0;
+        bottom: 1%;
+        width: 6%;
+        transition: 250ms linear;
+        
+    }
+    .content #down_arrow:hover {
+        transition: 250ms linear;
+        filter: brightness(50%);
+    }
+    .content .scrollable_area #story_title {
+        color: white;
+        font-size: 10vw;
+        font-family: 'MuseoModerno';
+        margin-left: 1vw;
+        margin-right: 1vw;
+        font-weight: bold;
+        text-align: center;
+    }
+    .content .scrollable_area .section_titles {
+        color: white;
+        font-size: 9vw;
+        font-family: 'MuseoModerno';
+        margin-left: 1vw;
+        margin-right: 1vw;
+        text-align: center;
+    }
+    .content .scrollable_area .description {
+        font-size: 4vw;
+        font-family: 'Fira Sans';
+        color: white;
+        margin-left: 2%;
+        margin-right: 2%;
+        margin-bottom: 5%;
+        text-align: center;
+    }
+    .content .scrollable_area .description_section {
+        margin-bottom: 10%;
+    }
+    .content .scrollable_area .serve_section {
+        margin-bottom: 10%;
+        margin-left: 1vw;
+        margin-right: 1vw;
+        text-align: center;
+    }
+    .content .scrollable_area .serve_section .serve_information {
+        display: grid;
+        grid-template-columns: 33% 33% 33%;
+    }
+    .content .scrollable_area .serve_section .serve_information .serve_images {
+        width: 50%;
+        text-align: center;
+        margin-bottom: 4%;
+    }
+    .content .scrollable_area .serve_section .serve_information .serve_button_links {
+        text-decoration: none;
+        margin: 0;
+        padding: 0;
+    }
+    .content .scrollable_area .serve_section .serve_information .serve_buttons {
+        color: white;
+        font-size: 3.25vw;
+        font-family: 'Fira Sans';
+        text-align: center;
+        transition: 250ms linear;
+        border: none;
+        background-color: transparent;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    .content .scrollable_area .serve_section .serve_information .serve_buttons:hover {
+        filter: brightness(50%);
+        transition: 250ms linear;
+    }
+    .content .scrollable_area .serve_section .serve_information .serve_list {
+        text-align: center;
+        list-style: inside;
+    }
+    .content .scrollable_area .serve_section .serve_information .serve_list .serve_description {
+        color: white;
+        font-size: 2.25vw;
+        font-family: 'Fira Sans';
+    }
+    .content .scrollable_area .team_section {
+        margin-bottom: 10%;
+    }
+    .content .scrollable_area .team_section .team_social_media {
+        text-align: center;
+    }
+    .content .scrollable_area .team_section .team_social_media .team_social_media_icons {
+        display: inline;
+        color: white;
+        font-size: 8vw;
+        text-decoration: none;
+        margin: 4%;
+        transition: 250ms linear;
+    }
+    .content .scrollable_area .team_section .team_social_media .team_social_media_icons:hover {
+        transition: 250ms linear;
+        filter: brightness(50%);
+    }
+    .content .scrollable_area .team_section .people {
+        display: block;
+        margin-bottom: 10%;
+    }
+    .content .scrollable_area .team_section .people_images {
+        width: 100%;
+    }
+    .content .scrollable_area .name_titles {
+        font-size: 8vw;
+        font-family: 'Fira Sans';
+        color: white;
+        text-align: center;
+    }
+    .content .scrollable_area .information_section {
+        text-align: center;
+    }
+    .content .scrollable_area .information_section .information_text {
+        font-size: 4vw;
+        font-family: 'Fira Sans';
+        color: white;
+        text-align: center;
+    }
+    .content .scrollable_area .information_section .information_social_media {
+        font-size: 6vw;
+        color: white;
+        display: inline;
+        margin-right: 2%;
+        transition: 250ms linear;
+    }
+    .content .scrollable_area .information_section .information_social_media:hover {
+        filter: brightness(50%);
+        transition: 250ms linear;
+    }
+    .content .scrollable_area .game_section {
+        padding-bottom: 40%;
+    }
+    .content .scrollable_area .game_section .games_header {
+        display: grid;
+        grid-template-columns: 58% 40%;
+        column-gap: 2%;
+        margin-left: 2%;
+        margin-right: 2%;
+        margin-bottom: 4%;
+        align-items: center;
+    }
+    .content .scrollable_area .game_section hr {
+        color: white;
+        border-color: white;
+        text-align: center;
+        height: 3px;
+        background-color: white;
+        border-width: 1px;
+        border-style: solid;
+        opacity: 100%;
+    }
+    .content .scrollable_area .game_section .games_titles {
+        color: white;
+        font-size: 8vw;
+        font-family: 'MuseoModerno';
+        margin-left: 1vw;
+        margin-right: 1vw;
+    }
+    .content .scrollable_area .game_section .games_descriptions {
+        color: white;
+        font-size: 4vw;
+        font-family: 'MuseoModerno';
+        margin-left: 1vw;
+        margin-right: 1vw;
+    }
+    .content .scrollable_area .game_section .games_buttons {
+        border-radius: 999px;
+        box-sizing: border-box;
+        background-color: transparent;
+        color: #FFFFFF;
+        cursor: pointer;
+        font-size: 4vw;
+        opacity: 1;
+        outline: 0 solid transparent;
+        padding: 8px 18px;
+        border-style: solid;
+        border-color: white;
+        font-family:'Fira Sans';
+        text-decoration: none;
+        margin-left: 1vw;
+        margin-right: 1vw;
+        transition: 250ms linear;
+    }
+    .content .scrollable_area .game_section .games_buttons:hover {
+        transition: 250ms linear;
+        filter: brightness(50%);
+    }
+    .content .scrollable_area .game_section .games_logos {
+        width: 100%;
+        transform: scale(0.95);
+        transition: 250ms linear;
+    }
+    .content .scrollable_area .game_section .games_logos:hover {
+        transform: scale(1.05);
+        transition: 250ms linear;
+        padding: none;
+    }
 }
